--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,9 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: yugioh
+      DB_USER: root
+      DB_PASSWORD: password
+      DB_HOST: 172.18.0.2
+      DB_PORT: 3306
+      DB_NAME: yugioh
+
